examples/invalid/var_var.sv
module var_var;

logic a;

logic a;

endmodule
